# Stinger

./: .gitignore  LICENSE  README.md  checker.py  config.yaml  config_EXAMPLE.yaml  go.mod  go.sum  pyproject.toml  requirements.txt  setup-guide.md  smtp_worker.go  smtp_worker_test.go
.github/workflows/: ci-pipeline.yaml  ci-pipeline.yml
smtp_stinger/: __init__.py  builder.py  checkpoint.py  cli.py  dns_cache.py  doctor.py  main.go  models.py  output.py  parse_worker.py  parser.py  verifier.py  worker.py
smtp_stinger/parse/: 7z.go  bz2.go  csv.go  csv_test.go  db.go  doc.go  docx.go  eml.go  engine.go  gz.go  html.go  ini.go  json.go  ldif.go  mbox.go  msg.go  odp.go  ods.go  odt.go  pdf.go  ppt.go  pptx.go  rar.go  registry.go  sqlite.go  tar.go  tar_gz.go  toml.go  txt.go  vcf.go  xls.go  xlsx.go  xz.go  yaml.go  zip.go
smtp_stinger/profiler/: config.go  cpu.go  generic.go  profiler.go  registry.go  stats.go  trace.go
src/: cli.py  config.py  doctor.py  output.py  worker.py
tests/: txt_test.go
tests/go/: 7z_test.go  csv_test.go  txt_test.go
tests/python/: conftest.py  test_checkpoint.py  test_config.py  test_dns_cache.py  test_models.py  test_output.py  test_verifier.py  test_worker_pool.py
