[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smtp-stinger"
version = "1.0.0"
description = "High-performance SMTP email verifier"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "dnspython>=2.4",
    "pyyaml>=6.0",
]

[project.scripts]
stinger = "smtp_stinger.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smtp_stinger*"]

[tool.setuptools.package-data]
smtp_stinger = ["smtp_worker"]